next
-------------------
- Allow multiple users to execute the "package" task for the same project
  simultaneously.
- BREAKING: Commands executed with remote_exec() inside the "run" block of
  the "package" task will now execute in your commit working directory, so
  you no longer need to prefix commands with "cd #{h.commit}". You will
  need to update existing Harrisonfile "package" run blocks to reflect the
  change of execution context.

0.2.0
-------------------
- Implemented the ability to purge old releases after a successful deploy.

0.1.0
-------------------
- Renamed --pkg_dir option of 'package' task to --destination
- Implemented remote destinations for 'package' task.
- Implemented remote artifact sources for 'deploy' task.
- Added a default timeout of 10 seconds when establishing an SSH connection.

0.0.1
-------------------
- Initial public release.